--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Chloe Mirzayi
 email: cmirzayi@gmail.com
-description:  # this means to ignore newlines until "baseurl:"
+description: >- # this means to ignore newlines until "baseurl:"
 Hello my name is Chloe Mirzayi
 baseurl: /
 url: https://chloemirzayi.com
