--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Chloe Mirzayi
 email: cmirzayi@gmail.com
 description:  # this means to ignore newlines until "baseurl:"
-    "Hello my name is Chloe Mirzayi"
+    "Hello my name is Chloe Mirzayi. I'm a doctoral student in Epidemiology."
 baseurl: /
 url: https://chloemirzayi.com
 twitter_username: cmirzayi
